--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-<html><body><h1>It works!</h1></body></html>
+<br />
+<div class="d-flex justify-content-center">
+    <form action="index.php" method="post">
+        <div class="input-group">
+            <input
+                required
+                type="text"
+                id="product_name_new"
+                name="product_code"
+                class="form-control"
+                placeholder="Product's code"
+            />
+            <input
+                required
+                type="text"
+                id="product_new_cost"
+                name="count_of_product"
+                class="form-control"
+                placeholder="Count"
+            />
+            <input
+                type="submit"
+                class="btn btn-primary"
+                id="addProduct"
+                value="Add product"
+                name="product_count_form"
+            />
+        </div>
+    </form>
+</div>
+
+<div class="d-flex justify-content-center">
+    <form action="index.php" method="post">
+        <div class="input-group">
+            <input
+                required
+                type="text"
+                id="product_name_new"
+                name="product_name_new"
+                class="form-control"
+                placeholder="Product's name"
+            />
+            <input
+                required
+                type="text"
+                id="product_new_cost"
+                name="product_new_cost"
+                class="form-control"
+                placeholder="Cost"
+            />
+            <input
+                type="submit"
+                class="btn btn-primary"
+                id="product_add_new"
+                value="Add new product"
+                name="product_add_new"
+            />
+        </div>
+    </form>
+</div>
+
+<div class="col-4">
+    <form action="index.php" class="input-group col-4">
+        <input type="text" id="product_search" class="form-control col-4" />
+        <input type="button" value="Search" class="btn btn-primary" />
+    </form>
+</div>
+<?php
+        $show_db = "SELECT id, name, cost, count FROM products";
+        $result = $conn->query($show_db); ?>
+<table class="table table-bordered table-hover table-striped">
+    <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>count</th>
+        <th>cost</th>
+    </tr>
+    <?php
+            if ($result->num_rows > 0) { // output data of each row while($row =
+    $result->fetch_assoc()) { ?>
+
+    <tr>
+        <td><?php echo $row["id"]?></td>
+        <td><?php echo $row["name"]?></td>
+        <td><?php echo $row["count"]?></td>
+        <td><?php echo $row["cost"]?></td>
+    </tr>
+
+    <?php
+        
+                }
+            } else {
+  
+            }
+            ?>
+</table>
